--- a/node-rest-velha/package.json
+++ b/node-rest-velha/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "build": "npm install express && npm install body-parser && node ./server.js"
   },
   "keywords": [
     "node",
@@ -14,6 +15,7 @@
   ],
   "author": "Samuel Simonetti",
   "license": "ISC",
+  "homepage": "https://github.com/srsimonetti/TesteBackEndDTI/blob/master/README.md",
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1"
